Melhorando formatação do README e configurando uso do MONGO_DATABASE via .env

--- a/.env.exemple
+++ b/.env.exemple
@@ -8,6 +8,9 @@ BATCH_SIZE=500
 API_USERNAME=usuario_do_api
 API_PASSWORD=senha_do_api
 
+# MONGO_DATABASE
+MONGO_DATABASE=emillenium_sync
+
 # COLLECTION_LANCAMENTOS
 COLLECTION_LANCAMENTOS=lancamentos
 COLLECTION_LANCAMENTOS_CHAVE=n_documento
